quick fix of the layout shift due to scrollbar disappearing on scroll disable for overlays

--- a/src/index.css
+++ b/src/index.css
@@ -123,5 +123,7 @@
 
   html {
     @apply scroll-smooth;
+    scrollbar-gutter: stable;
+
   }
 }
